# numpy-100

./: 100_Numpy_exercises.ipynb  pyproject.toml
