[tool.poetry]
name = "numpy-100"
version = "0.1.0"
description = "100 numpy lectures"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = ">=1.17.4"
pandas = ">=0.25.3"
jupyter = ">=1.0.0"
jupyterthemes = ">=0.20.0"
mdutils = ">=1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
